Kelsey Development Sandbox/src/objects/DS_Background_Family_Info_B__c.object
<CustomObject>
    <fields>
        <fullName>BHISFEED__c</fullName>
        <description>Feeding Conditions (e.g., eats non-foods, has swallowing difficulties, etc.)</description>
        <label>BHISFEED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISGI__c</fullName>
        <description>GI Problems is health condition</description>
        <label>BHISGI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISHED__c</fullName>
        <description>Headaches is health condition</description>
        <label>BHISHED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISHRT__c</fullName>
        <description>Heart Conditions  is the health status</description>
        <label>BHISHRT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISOTHR__c</fullName>
        <description>Other is health condition</description>
        <label>BHISOTHR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISOTSP__c</fullName>
        <description>Other Please specify</description>
        <label>BHISOTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHISPYSI__c</fullName>
        <description>Physical impairment is health condition</description>
        <label>BHISPYSI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISSEZ__c</fullName>
        <description>Seizure/Convulsions Problems</description>
        <label>BHISSEZ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISWTLS__c</fullName>
        <description>Weight loss/ Weight Gain/ Thyroid Problems</description>
        <label>BHISWTLS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISWT__c</fullName>
        <description>Weight issues is health condition</description>
        <label>BHISWT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHOVERALL__c</fullName>
        <description>How would your rate you [your child&apos;s] overall health right now?</description>
        <label>BHOVERALL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHSRED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emergency Department is the service</description>
        <label>BHSRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHSRHOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hospital is the service</description>
        <label>BHSRHOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHSROT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Occupational Therapy is the service</description>
        <label>BHSROT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHSRSUR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Surgery is the service</description>
        <label>BHSRSUR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHSRUC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Urgent Care is the service</description>
        <label>BHSRUC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHSRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unknown is the service</description>
        <label>BHSRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BHSR__c</fullName>
        <description>Non routine healthcare services Recieved</description>
        <label>BHSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHTHSTAT__c</fullName>
        <description>Childs physical health status</description>
        <label>BHTHSTAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIDENTSP__c</fullName>
        <description>What is the child&apos;s current gender identity (for clients 5 or older)?  Other, please specify</description>
        <label>BIDENTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIDENT__c</fullName>
        <description>What is the child&apos;s current gender identity (for clients 5 or older)?</description>
        <label>BIDENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BINCOMNW__c</fullName>
        <description>Total income for the child&apos;s household</description>
        <label>BINCOMNW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BINCOMSP__c</fullName>
        <description>Total income specified</description>
        <label>BINCOMSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BINFAGCY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Agency Staff</description>
        <label>BINFAGCY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINFCHLD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Child</description>
        <label>BINFCHLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINFCOLL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Collateral Sources</description>
        <label>BINFCOLL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINFFOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Foster Parent</description>
        <label>BINFFOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINFOADL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Other Adult Relative</description>
        <label>BINFOADL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINFOSP__c</fullName>
        <description>Information from Other Specified</description>
        <label>BINFOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BINFOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Other</description>
        <label>BINFOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINFPAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information from Parent</description>
        <label>BINFPAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLANGHMS__c</fullName>
        <description>Language at home Other Specified</description>
        <label>BLANGHMS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLANGHOM__c</fullName>
        <description>Primary language at home</description>
        <label>BLANGHOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLFATHER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Father</description>
        <label>BLFATHER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLGRAND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Grandparents</description>
        <label>BLGRAND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLMOTHER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Mother</description>
        <label>BLMOTHER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLNONREL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Non-Relative</description>
        <label>BLNONREL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLOREL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Other Adult Relative</description>
        <label>BLOREL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLOTHRSP__c</fullName>
        <description>Other adult Specified</description>
        <label>BLOTHRSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Other adult</description>
        <label>BLOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLPARTNR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Parent&apos;s Partner</description>
        <label>BLPARTNR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLUNK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child lives with Unknown</description>
        <label>BLUNK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRIA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family currently experiencing any difficulties:  Access to benefits</description>
        <label>BMDIFRIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRIE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family currently experiencing any difficulties: Employment</description>
        <label>BMDIFRIE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family currently experiencing any difficulties: Homlessness or access to stable housing</description>
        <label>BMDIFRIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family currently experiencing any difficulties: Legal problems</description>
        <label>BMDIFRIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRIOSP__c</fullName>
        <description>Family currently experiencing any difficulties: Other Specified</description>
        <label>BMDIFRIOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMDIFRIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family currently experiencing any difficulties: Other</description>
        <label>BMDIFRIO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRIUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family currently experiencing any difficulties: Unknown</description>
        <label>BMDIFRIUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMDIFRI__c</fullName>
        <description>Family currently experiencing any difficulties associated with the service member&apos;s reintegration</description>
        <label>BMDIFRI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMETHORG__c</fullName>
        <description>3. Mother&apos;s ethnic origin</description>
        <label>BMETHORG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMET__c</fullName>
        <description>Baseline method of administration</description>
        <label>BMET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM1B2__c</fullName>
        <description>Branch 2: Reserve or National Guard (Family Member 1)</description>
        <label>BMFM1B2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM1B__c</fullName>
        <description>Service Branch for Family Member 1 (Army, Air Force, Navy, Marine Corps, or Coast Guard)</description>
        <label>BMFM1B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM1DP__c</fullName>
        <description>Did they experience a wartime deployment? (Family Member 1)</description>
        <label>BMFM1DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM1MODP__c</fullName>
        <description>During the child&apos;s life what was the total number of months this person was deployed? (Family Member 1)</description>
        <label>BMFM1MODP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM1RDP__c</fullName>
        <description>Most recent deployment for Family Member 1 (Currently, Last 30 days, Last Year, Greater than 1 year, or unknown)</description>
        <label>BMFM1RDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM1S__c</fullName>
        <description>Status: Active Duty, Retired, or Other (Family Member 1)</description>
        <label>BMFM1S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM2B2__c</fullName>
        <description>Branch 2: Reserve or National Guard (Family Member 2)</description>
        <label>BMFM2B2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM2DP__c</fullName>
        <description>Did they experience a wartime deployment? (Family Member 2)</description>
        <label>BMFM2DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM2MODP__c</fullName>
        <description>During the child&apos;s life what was the total number of months this person was deployed?</description>
        <label>BMFM2MODP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM2RDP__c</fullName>
        <description>Most recent deployment for Family Member 2 (Currently, Last 30 days, Last Year, Greater than 1 year, or unknown)</description>
        <label>BMFM2RDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM2S__c</fullName>
        <description>Status: Active Duty, Retired, or Other (Family Member 2)</description>
        <label>BMFM2S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM3DP__c</fullName>
        <description>Did they experience a wartime deployment? (Family Member 3)</description>
        <label>BMFM3DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM3MODP__c</fullName>
        <description>During the child&apos;s life what was the total number of months this person was deployed? (Family Member 2)</description>
        <label>BMFM3MODP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM3RDP__c</fullName>
        <description>Most recent deployment for Family Member 3 (Currently, Last 30 days, Last Year, Greater than 1 year, or unknown)</description>
        <label>BMFM3RDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFM3S__c</fullName>
        <description>Status: Active Duty, Retired, or Other (Family Member 3)</description>
        <label>BMFM3S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFMR1SP__c</fullName>
        <description>Family Member 1, other specified</description>
        <label>BMFMR1SP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMFMR1__c</fullName>
        <description>Family Member 1</description>
        <label>BMFMR1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFMR2SP__c</fullName>
        <description>Family Member 2, other specified</description>
        <label>BMFMR2SP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMFMR2__c</fullName>
        <description>Family Member 2</description>
        <label>BMFMR2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMFMR3SP__c</fullName>
        <description>Family Member 3, other specified</description>
        <label>BMFMR3SP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMFMR3__c</fullName>
        <description>Family Member 3</description>
        <label>BMFMR3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>